--- a/src/app/pages/panel/bienvenida/bienvenida.component.html
+++ b/src/app/pages/panel/bienvenida/bienvenida.component.html
@@ -1,66 +1,74 @@
 <div class="flex flex-wrap">
-    <div class="w-full xl:w-12/12 mb-12 xl:mb-0 px-4">
-        <div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded bg-slate-500" style="background: url('') center center / cover no-repeat; background-size: cover;">
-
-          <div class="fixed top-0 right-0 p-4">
-            <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-                <div class="flex justify-end px-4 pt-4">
-                    <!-- Dropdown menu -->
-                    <div id="dropdown" class="z-10 hidden text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
-                        <ul class="py-2" aria-labelledby="dropdownButton">
-                            <li>
-                                <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Edit</a>
-                            </li>
-                            <li>
-                                <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Export Data</a>
-                            </li>
-                            <li>
-                                <a href="#" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="flex flex-col pb-10 pl-9 pr-9">
-                    <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="https://th.bing.com/th/id/R.550f49a459548599a5a4ea1c67fc0244?rik=ji0NKVGInUZxuw&pid=ImgRaw&r=0" alt="Bonnie image"/>
-                    <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white"></h5>
-                    <span class="text-sm text-indigo-800">Cristian Carreto</span>
-                    <span class="text-sm text-indigo-800">carreto154@gmail.com</span>
-                    <span class="text-sm text-indigo-800">Administrador</span>
-                    <div class="flex mt-4 md:mt-6">
-                        </div>
-                </div>
-            </div>
-        </div>
-        <br><br><br><br><br><br>
-        
-          <div class="margin">
-            <div class="center-container">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12.76c0 1.6 1.123 2.994 2.707 3.227 1.068.157 2.148.279 3.238.364.466.037.893.281 1.153.671L12 21l2.652-3.978c.26-.39.687-.634 1.153-.67 1.09-.086 2.17-.208 3.238-.365 1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z" />
-              </svg>
-            </div>
-            <p></p>           
-            <ul class="list-disc">
-              <li><h2>Registro de Beneficiarios</h2>
+  <div class="w-full xl:w-12/12 mb-12 xl:mb-0 px-4">
+      <div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded bg-slate-500" style="background: url('') center center / cover no-repeat; background-size: cover;">
+        <div class="fixed top-0 right-0 p-4">
+          <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+              <div class="flex justify-end px-4 pt-4">
+                  <!-- Dropdown menu -->
+                  <div id="dropdown" class="z-10 hidden text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
+                      <ul class="py-2" aria-labelledby="dropdownButton">
+                          <li>
+                              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Edit</a>
+                          </li>
+                          <li>
+                              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Export Data</a>
+                          </li>
+                          <li>
+                              <a href="#" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete</a>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
+              <div class="flex flex-col pb-10 pl-9 pr-9">
+                  <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="https://th.bing.com/th/id/R.550f49a459548599a5a4ea1c67fc0244?rik=ji0NKVGInUZxuw&pid=ImgRaw&r=0" alt="Bonnie image"/>
+                  <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white"></h5>
+                  <span class="text-sm text-indigo-800">Cristian Carreto</span>
+                  <span class="text-sm text-indigo-800">carreto154@gmail.com</span>
+                  <span class="text-sm text-indigo-800">Administrador</span>
+              </div>
+          </div>
+      </div>
+      <br><br><br><br><br>
+        <div class="">
+          <div class="center-container">
+          </div>
+          <p></p>
+          <div class="">
+            <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
+              <div class="titulo px-6 mt-2"><h2>Beneficios entregadas</h2></div>
+              <div class="tamaño px-6 ">
+                <li><h2>Registro de Beneficiarios</h2>
                   <p>Desarrolla un portal en línea fácil de usar para el registro de beneficiarios.</p>
                   <p>Proporciona información clara sobre el propósito del programa, los criterios de elegibilidad y los beneficios ofrecidos.</p>
               </li>
-              <br>
-              <br>
-              <li><h2>Registro de Evidencias de Entrega</h2>
-                <p>Implementa un proceso de verificación eficiente para garantizar la elegibilidad.</p>
-                <p>Puedes colaborar con instituciones locales para verificar la información proporcionada.</p>
-              </li>
-              <br>
-              <br>
-              <li><h2>Historial de Actividades</h2>
-                <p>Brinda a los beneficiarios la opción de mantener su historial anónima o compartirla públicamente según su preferencia.</p>
-                <p>Crea un historial que registre la participación de cada beneficiario en actividades específicas del programa a lo largo del tiempo.</p>
-              </li>
-            </ul>
-            <br>
-            <p></p>
+              </div>
+            </div>
           </div>
-    </div>
+          <div class="">
+            <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
+              <div class="titulo px-6 mt-2"><h2>Beneficios entregadas</h2></div>
+              <div class="tamaño px-6 ">
+                <li><h2>Registro de Evidencias de Entrega</h2>
+                  <p>Implementa un proceso de verificación eficiente para garantizar la elegibilidad.</p>
+                  <p>Puedes colaborar con instituciones locales para verificar la información proporcionada.</p>
+                </li>
+              </div>
+            </div>
+          </div>
+          <div class="">
+            <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
+              <div class="titulo px-6 mt-2"><h2>Beneficios entregadas</h2></div>
+              <div class="tamaño px-6 ">
+                <li><h2>Historial de Actividades</h2>
+                  <p>Brinda a los beneficiarios la opción de mantener su historial anónima o compartirla públicamente según su preferencia.</p>
+                  <p>Crea un historial que registre la participación de cada beneficiario en actividades específicas del programa a lo largo del tiempo.</p>
+                </li>
+              </div>
+            </div>
+          </div>
+          <br>
+          <p></p>
+        </div>
   </div>
-  
+</div>
+(41 kB)
