--- a/src/shared/components/cards/card-areas/card-areas.component.html
+++ b/src/shared/components/cards/card-areas/card-areas.component.html
@@ -24,9 +24,8 @@
                       </svg>
                     </button>
 
-                      <input class="border border-gray-300 rounded-md focus:outline-none focus:border-blue-500" type="text" placeholder="Buscar" />
+                    <input class="border border-gray-300 rounded-md focus:outline-none focus:border-blue-500" type="text" (input)="actualizarFiltro($event)" placeholder="Buscar" />
                   </div>
-
             </div>
           </div>
                   </div>
@@ -136,11 +135,11 @@
           </div>
 
       </div>
-      
+
       </div>
-      <div class="block w-full overflow-x-auto"> 
+      <div class="block w-full overflow-x-auto">
         <!-- Projects table -->
-        <table class="items-center w-full bg-transparent border-collapse"> 
+        <table class="items-center w-full bg-transparent border-collapse">
           <thead class="table-header">
                 <tr style="font-size: .3cm;" class="text-center ">
                     <th class="text-center" class="table-header"> Nombre </th>
@@ -150,7 +149,7 @@
                 </tr>
             </thead>
             <tbody class="custom-th">
-              <tr class="custom-tr" *ngFor="let areasadscripcion of areasadscripcion; let i = index" [ngClass]="{'bg-gray-100': i % 2 === 0, 'bg-white': i % 2 !== 0, 'custom-table-row': true}">
+              <tr  class="custom-tr" *ngFor="let areasadscripcion of areasadscripcion; let areas of filtrarAreas(); ;let i = index" [ngClass]="{'bg-gray-100': i % 2 === 0, 'bg-white': i % 2 !== 0, 'custom-table-row': true}">
                     <td style="font-size: .32cm;" class="text-center font-normal">{{ areasadscripcion.nombre }}</td> <!--se quito el font-semibold YENNI-->
                     <td style="font-size: .32cm;" class="text-center font-normal">{{ areasadscripcion.descripcion }}</td> <!--se quito el font-semibold YENNI-->
                     <td style="font-size: .32cm;" class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-sm whitespace-nowrap p-4 no-bold"> <!--se quito el font-semibold YENNI-->
@@ -231,6 +230,6 @@
         </div>
 
   </div>
-  
+
 
   <script src="https://unpkg.com/flowbite@1.3.4/dist/flowbite.js"></script>
