--- a/src/shared/components/cards/card-bar-mapa/card-bar-mapa.component.html
+++ b/src/shared/components/cards/card-bar-mapa/card-bar-mapa.component.html
@@ -8,9 +8,10 @@
       </select>
       </div>
       <br>
-      <button class="bg-green-500 text-white font-bold py-2 px-4 rounded" (click)="mapa()" style="cursor: pointer; background-color: #34D399; border: none; border-radius: 4px;">
+      <button class="bg-green-500 text-white font-bold py-2 px-4 rounded float-right" style="margin-right: 50px;" (click)="mapa();dato()" style="cursor: pointer; background-color: #34D399; border: none; border-radius: 4px;">
         Todos los Beneficiarios
       </button>
+
       <br>
       <br>
 
@@ -28,12 +29,12 @@
             ></div>
           </div>
         </div>
-        <div class="max-w-sm mx-auto bg-white rounded overflow-hidden shadow-lg my-4" style="
-        border-right-width: 10px; width: 300px; height:80px;" *ngFor="let programa of prograsmasocial;">
+        <div class="max-w-sm mx-auto bg-white rounded overflow-hidden shadow-lg my-4" style="width: 300px; height: 80px;" *ngFor="let programa of prograsmasocial;">
           <div class="px-6 py-4 text-center">
             <div class="mb-2">
               <div class="flex items-center justify-center">
-                <div class="color-circle h-8 w-8 mr-3" [style.backgroundColor]="programa.color"></div>
+                <!-- Utiliza clases de Tailwind CSS para hacer un círculo -->
+                <div class="color-circle h-8 w-8 mr-3 rounded-full" [style.backgroundColor]="programa.color"></div>
                 <div>
                   <div class="text-xl">{{ programa.nombre }}</div>
                 </div>
@@ -41,6 +42,7 @@
             </div>
           </div>
         </div>
+        
 
 
   </div>
