--- a/src/app/pages/panel/bienvenida/bienvenida.component.html
+++ b/src/app/pages/panel/bienvenida/bienvenida.component.html
@@ -1,5 +1,6 @@
 <div class="flex flex-wrap">
   <div class="w-full xl:w-12/12 mb-12 xl:mb-0 px-4">
+    
       <div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded bg-slate-500" style="background: url('') center center / cover no-repeat; background-size: cover;">
         <div class="fixed top-0 right-0 p-4">
           <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
@@ -17,18 +18,22 @@
                               <a href="#" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete</a>
                           </li>
                       </ul>
-                  </div>
+                  </div>                 
               </div>
-              <div class="flex flex-col pb-10 pl-9 pr-9">
-                  <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="https://th.bing.com/th/id/R.550f49a459548599a5a4ea1c67fc0244?rik=ji0NKVGInUZxuw&pid=ImgRaw&r=0" alt="Bonnie image"/>
-                  <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white"></h5>
-                  <span class="text-sm text-indigo-800">Cristian Carreto</span>
-                  <span class="text-sm text-indigo-800">carreto154@gmail.com</span>
-                  <span class="text-sm text-indigo-800">Administrador</span>
-              </div>
+              <div class="flex flex-col pb-10 pl-9 pr-9 border-purple-500 border-4 rounded-lg">
+                <div class="w-24 h-24 mb-4 rounded-full shadow-lg bg-purple-500">
+                    <img class="w-full h-full rounded-full" src="https://th.bing.com/th/id/R.550f49a459548599a5a4ea1c67fc0244?rik=ji0NKVGInUZxuw&pid=ImgRaw&r=0" alt="Bonnie image"/>
+                </div>
+                <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white"></h5>
+                <span class="text-sm text-indigo-800">Cristian Carreto</span>
+                <span class="text-sm text-indigo-800">carreto154@gmail.com</span>
+                <span class="text-sm text-indigo-800">Director de área</span>
+                <span class="text-sm text-indigo-800">Administrador</span>
+            </div>
+            
           </div>
       </div>
-      <br><br><br><br><br>
+      <br><br><br><br><br><br><br>
         <div class="">
           <div class="center-container">
           </div>
@@ -71,4 +76,3 @@
         </div>
   </div>
 </div>
-(41 kB)
