--- a/src/app/pages/panel/bienvenida/bienvenida.component.html
+++ b/src/app/pages/panel/bienvenida/bienvenida.component.html
@@ -20,16 +20,17 @@
                       </ul>
                   </div>                 
               </div>
-              <div class="flex flex-col pb-10 pl-9 pr-9 border-purple-500 border-4 rounded-lg">
-                <div class="w-24 h-24 mb-4 rounded-full shadow-lg bg-purple-500">
-                    <img class="w-full h-full rounded-full" src="https://th.bing.com/th/id/R.550f49a459548599a5a4ea1c67fc0244?rik=ji0NKVGInUZxuw&pid=ImgRaw&r=0" alt="Bonnie image"/>
+              <div class="flex flex-col items-center p-6 border-purple-500 border-4 rounded-lg bg-gradient-to-r from-purple-400 to-purple-600">
+                <div class="w-32 h-32 mb-4 rounded-full overflow-hidden shadow-lg border-4 border-white">
+                    <img class="w-full h-full object-cover rounded-full" src="https://th.bing.com/th/id/R.550f49a459548599a5a4ea1c67fc0244?rik=ji0NKVGInUZxuw&pid=ImgRaw" alt="Bonnie image"/>
                 </div>
-                <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white"></h5>
-                <span class="text-sm text-indigo-800">Cristian Carreto</span>
-                <span class="text-sm text-indigo-800">carreto154@gmail.com</span>
-                <span class="text-sm text-indigo-800">Director de área</span>
-                <span class="text-sm text-indigo-800">Administrador</span>
+                <h5 class="mb-1 text-2xl font-semibold text-white">Cristian Carreto</h5>
+                <hr class="my-1 border-gray-300 w-full"> 
+                <span class="text-sm text-gray-300">carreto154@gmail.com</span>
+                <span class="text-sm text-gray-300">Director de Área Social</span>
+                <span class="text-sm text-gray-300">Administrador</span>
             </div>
+                       
             
           </div>
       </div>
@@ -37,42 +38,31 @@
         <div class="">
           <div class="center-container">
           </div>
-          <p></p>
-          <div class="">
-            <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
-              <div class="titulo px-6 mt-2"><h2>Beneficios entregadas</h2></div>
-              <div class="tamaño px-6 ">
-                <li><h2>Registro de Beneficiarios</h2>
-                  <p>Desarrolla un portal en línea fácil de usar para el registro de beneficiarios.</p>
-                  <p>Proporciona información clara sobre el propósito del programa, los criterios de elegibilidad y los beneficios ofrecidos.</p>
-              </li>
+          <p></p>         
+          <div class="container mx-auto mt-8">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
+              <!-- Primer Beneficio -->
+              <div class="bg-gradient-to-r from-purple-400 to-purple-600 text-white p-6 rounded-lg shadow-lg">
+                <h2 class="text-xl font-semibold mb-4">Registro de Beneficiarios</h2>
+                <p>Desarrolla un portal en línea fácil de usar para el registro de beneficiarios.</p>
+                <p>Proporciona información clara sobre el propósito del programa, los criterios de elegibilidad y los beneficios ofrecidos.</p>
+              </div>
+          
+              <!-- Segundo Beneficio -->
+              <div class="bg-gradient-to-r from-purple-400 to-purple-600 text-white p-6 rounded-lg shadow-lg">
+                <h2 class="text-xl font-semibold mb-4">Registro de Evidencias de Entrega</h2>
+                <p>Implementa un proceso de verificación eficiente para garantizar la elegibilidad.</p>
+                <p>Puedes colaborar con instituciones locales para verificar la información proporcionada.</p>
+              </div>
+          
+              <!-- Tercer Beneficio -->
+              <div class="bg-gradient-to-r from-purple-400 to-purple-600 text-white p-6 rounded-lg shadow-lg">
+                <h2 class="text-xl font-semibold mb-4">Historial de Actividades</h2>
+                <p>Brinda a los beneficiarios la opción de mantener su historial anónima o compartirla públicamente según su preferencia.</p>
+                <p>Crea un historial que registre la participación de cada beneficiario en actividades específicas del programa a lo largo del tiempo.</p>
               </div>
             </div>
           </div>
-          <div class="">
-            <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
-              <div class="titulo px-6 mt-2"><h2>Beneficios entregadas</h2></div>
-              <div class="tamaño px-6 ">
-                <li><h2>Registro de Evidencias de Entrega</h2>
-                  <p>Implementa un proceso de verificación eficiente para garantizar la elegibilidad.</p>
-                  <p>Puedes colaborar con instituciones locales para verificar la información proporcionada.</p>
-                </li>
-              </div>
-            </div>
-          </div>
-          <div class="">
-            <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
-              <div class="titulo px-6 mt-2"><h2>Beneficios entregadas</h2></div>
-              <div class="tamaño px-6 ">
-                <li><h2>Historial de Actividades</h2>
-                  <p>Brinda a los beneficiarios la opción de mantener su historial anónima o compartirla públicamente según su preferencia.</p>
-                  <p>Crea un historial que registre la participación de cada beneficiario en actividades específicas del programa a lo largo del tiempo.</p>
-                </li>
-              </div>
-            </div>
-          </div>
-          <br>
-          <p></p>
-        </div>
+          
   </div>
 </div>
