--- a/src/app/pages/panel/mapa-programas-sociales/mapa-programas-sociales.component.html
+++ b/src/app/pages/panel/mapa-programas-sociales/mapa-programas-sociales.component.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
+    <div class="rounded-t mb-0 px-4 py-3 border-0">
+        <!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -67,4 +69,7 @@
 
             <!-- Tabla con colores -->
 
-        </div>
+        
+    </div>
+</div>
+
