--- a/src/shared/components/cards/card-bar-prograsmasocial/card-bar-prograsmasocial.component.html
+++ b/src/shared/components/cards/card-bar-prograsmasocial/card-bar-prograsmasocial.component.html
@@ -136,7 +136,7 @@
     <table class="items-center w-full bg-transparent border-collapse">
       <thead class="table-header">
         <tr style="font-size: .3cm;">
-          <th>Nombre</th>
+          <th class="text-left pl-20">Nombre</th>
           <th>Color</th>
           <th>Acrónimo</th>
           <th>Estatus</th>
@@ -145,7 +145,7 @@
       </thead>
       <tbody class="custom-th">
         <tr class="custom-tr" *ngFor="let programa of prograsmasocial; let prograsmasocial of filtrarProgramas(); let i = index"  [ngClass]="{'bg-gray-100': i % 2 === 0, 'bg-white': i % 2 !== 0, 'custom-table-row': true}">
-          <td style="font-size: .32cm;">{{ programa.nombre }}</td>
+          <td style="font-size: .32cm;" class="text-left pl-20">{{ programa.nombre }}</td>
           <td style="font-size: .32cm;"><div class="color-circle" [style.backgroundColor]="programa.color"></div></td>
           <td style="font-size: .32cm;">{{ programa.acronimo }}</td>
           <td style="font-size: .32cm;">{{ programa.estatus ? 'Activo' : 'Inactivo' }}</td>
