--- a/src/app/pages/panel/bienvenida/bienvenida.component.html
+++ b/src/app/pages/panel/bienvenida/bienvenida.component.html
@@ -1,6 +1,7 @@
 <div class="flex flex-wrap">
   <div class="w-full xl:w-12/12 mb-12 xl:mb-0 px-4">
     
+    
       <div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded bg-slate-500" style="background: url('') center center / cover no-repeat; background-size: cover;">
         <div class="fixed top-0 right-0 p-4">
           <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
@@ -19,8 +20,23 @@
                           </li>
                       </ul>
                   </div>                 
-              </div>
-              <div class="flex flex-col items-center p-6 border-purple-500 border-4 rounded-lg bg-gradient-to-r from-purple-400 to-purple-600">
+              </div>             
+                                  
+          </div>
+      </div>
+      <br><br><br>
+      <style>
+        
+        .card {
+          border: 3px solid #511e74; /* Color del borde */
+          border-radius: 12px; /* Radio de borde para hacerlo redondeado */
+          overflow: hidden; /* Evita que el contenido sobresalga del borde */
+        }
+      </style>
+      
+      <div class="container mx-auto mt-8">
+        <div class="w-1/4 p-6">
+            <div class="flex flex-col items-center border-purple-500 border-4 rounded-lg bg-gradient-to-r from-purple-400 to-purple-600">
                 <div class="w-32 h-32 mb-4 rounded-full overflow-hidden shadow-lg border-4 border-white">
                     <img class="w-full h-full object-cover rounded-full" src="https://th.bing.com/th/id/R.550f49a459548599a5a4ea1c67fc0244?rik=ji0NKVGInUZxuw&pid=ImgRaw" alt="Bonnie image"/>
                 </div>
@@ -30,20 +46,11 @@
                 <span class="text-sm text-gray-300">Director de Área Social</span>
                 <span class="text-sm text-gray-300">Administrador</span>
             </div>
-                       
-            
-          </div>
-      </div>
-      <br><br><br><br><br><br><br>
-      <style>
-        .card {
-          border: 3px solid #511e74; /* Color del borde */
-          border-radius: 12px; /* Radio de borde para hacerlo redondeado */
-          overflow: hidden; /* Evita que el contenido sobresalga del borde */
-        }
-      </style>
-      
-      <div class="container mx-auto mt-8">
+        </div>
+    </div>
+    
+      <p>
+        
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
           <!-- Primer Beneficio -->
           <div class="card bg-gradient-to-r from-purple-400 to-purple-600 text-white p-6 rounded-lg shadow-lg">
@@ -51,6 +58,7 @@
             <p>Desarrolla un portal en línea fácil de usar para el registro de beneficiarios.</p>
             <p>Proporciona información clara sobre el propósito del programa, los criterios de elegibilidad y los beneficios ofrecidos.</p>
           </div>
+          
       
           <!-- Segundo Beneficio -->
           <div class="card bg-gradient-to-r from-purple-400 to-purple-600 text-white p-6 rounded-lg shadow-lg">
