--- a/src/shared/components/cards/card-bar-mapa/card-bar-mapa.component.html
+++ b/src/shared/components/cards/card-bar-mapa/card-bar-mapa.component.html
@@ -14,8 +14,11 @@
 
       <br>
       <br>
+      <br>
 
-
+      <label class="label" style="text-align: center; display: block; font-size: 1.5em; margin: 0 auto;">Beneficiarios del programa social: {{ select }}</label>
+      <br>
+            
       <div class="flex flex-wrap">
         <div class="w-full px-4 map-container">
           <div
