--- a/src/app/pages/panel/mapa-programas-sociales/mapa-programas-sociales.component.html
+++ b/src/app/pages/panel/mapa-programas-sociales/mapa-programas-sociales.component.html
@@ -29,12 +29,13 @@
         <div class="container mt-5">
 
             <!-- Mapa -->
-            <div class=" " style="max-height: 600px; overflow-y: auto;">
+            <div class="" style="max-height: 600px; overflow-y: auto; width: 50%; margin: 0;">
                 <label for="searchInput" class="form-label">Buscar municipio:</label>
                 <input type="text" class="form-control" id="searchInput">
             </div>
+            
             <div class="flex ">
-                <div class="flex  mt-3">
+                <div class="flex  mt-3"style="overflow-y: hidden;">
                     <div class=" " style="max-height: 600px; overflow-y: auto;">
                         <div class=" ">
                             <table class="table bg-white">
