--- a/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.html
+++ b/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.html
@@ -69,13 +69,13 @@
                               [items]="beneficiariosPorprogramas"
                               bindLabel="nombreCompleto"
                               bindValue="id"
-                              formControlName="Beneficiario"
+                              formControlName="beneficiarioId"
                               [searchable]="true"
-                              [ngClass]="{'is-invalid': EvidenciaForm.get('Beneficiario')?.touched && EvidenciaForm.get('Beneficiario')?.invalid}"
+                              [ngClass]="{'is-invalid': EvidenciaForm.get('beneficiarioId')?.touched && EvidenciaForm.get('beneficiarioId')?.invalid}"
                               (change)="filterBeneficiarios($event)"
                             ></ng-select>
-                            <div *ngIf="EvidenciaForm.get('Beneficiario')?.touched" class="error-message">
-                              <div *ngIf="EvidenciaForm.get('Beneficiario')?.hasError('required')">
+                            <div *ngIf="EvidenciaForm.get('beneficiarioId')?.touched" class="error-message">
+                              <div *ngIf="EvidenciaForm.get('beneficiarioId')?.hasError('required')">
                                 El beneficiario es requerido
                               </div>
                             </div>
@@ -94,17 +94,17 @@
                               </div>
                         </div>
                         <div>
-                          <label for="Foto" class="lavel">Evidencia fotografica*:</label>
-                          <input class="input" type="file" (change)="onFileChange($event)" formControlName="Foto">
+                          <label for="imagenBase64" class="lavel">Evidencia fotografica*:</label>
+                          <input class="input" type="file" (change)="onFileChange($event)" formControlName="imagenBase64">
                           
-                          <div *ngIf="EvidenciaForm.get('Foto')?.touched" class="error-message">
-                            <div *ngIf="EvidenciaForm.get('Foto')?.hasError('required')">
+                          <div *ngIf="EvidenciaForm.get('imagenBase64')?.touched" class="error-message">
+                            <div *ngIf="EvidenciaForm.get('imagenBase64')?.hasError('required')">
                               La evidencia es requerida
                             </div>
                           </div> 
                         </div>
                         <div>
-                          <img class="img" *ngIf="EvidenciaForm.get('Foto')?.value" [src]="EvidenciaForm.get('Foto')?.value" width="100%" height="100%" alt="Vista previa de la imagen">
+                          <img class="img" *ngIf="EvidenciaForm.get('imagenBase64')?.value" [src]="EvidenciaForm.get('imagenBase64')?.value" width="100%" height="100%" alt="Vista previa de la imagen">
                         </div>
                       </div>
                       
@@ -164,7 +164,7 @@
           <td
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-semibold"
           >
-          {{ evidencias.beneficiarioId }}
+          <img [src]="obtenerRutaImagen(evidencias.foto)" alt="Foto de {{ evidencias.foto }}" width="50" height="50" />
           </td>
           <td
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-semibold"
