--- a/src/app/pages/panel/mapa-programas-sociales/mapa-programas-sociales.component.html
+++ b/src/app/pages/panel/mapa-programas-sociales/mapa-programas-sociales.component.html
@@ -37,7 +37,7 @@
             <div class="flex ">
                 <div class="flex  mt-3"style="overflow-y: hidden;">
                     <div class=" " style="max-height: 600px; overflow-y: auto;">
-                        <div class=" ">
+                        <div class="flex" style="overflow-y: hidden; ">
                             <table class="table bg-white">
                                 <thead style="background-color: rgb(75, 43, 105);" class="table-header text-white">
                                     <tr>
