--- a/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.css
+++ b/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.css
@@ -2,125 +2,144 @@ body {
     background-color: #f7fafc;
     color: #1a202c;
     font-family: 'sans-serif';
-  }
-  .modal-container {
-    margin-top: 4%; 
-  }
-  .container {
+}
+
+.modal-container {
+    margin-top: 4%;
+}
+
+.container {
     margin-left: auto;
     margin-right: auto;
     padding: 1rem;
-  }
-  
-  .lavel {
+}
+
+.lavel {
     display: block;
     font-size: 0.875rem;
     font-weight: 500;
     color: #4a5568;
     padding-top: 10px;
     padding-bottom: 10px;
-  }
-  
-  .input[type="text"] {
+}
+
+.input[type="text"] {
     margin-top: 0.25rem;
     padding: 0.5rem;
     border-width: 1px;
     border-color: #e2e8f0;
     border-radius: 0.375rem;
     width: 100%;
-  }
-  
-  .select {
-      background-color: #f7fafc;
-      border: 1px solid #e2e8f0;
-      color: #1a202c;
-      font-size: 0.875rem;
-      border-radius: 0.375rem;
-      padding: 0.625rem; 
-      display: block;
-      width: 100%;
-    }
-    .select:focus {
-      outline: none;
-      border-color: #4299e1;
-      box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
-    }
-    .select option {
-      background-color: #ffffff;
-      color: #1a202c;
-    }
-    .select option:checked {
-      background-color: #4299e1;
-      color: #ffffff;
-    }
-    .error-message {
-      color: #e53e3e;
-      font-size: 0.875rem;
-  }
-  .custom-label {
+}
+
+.select {
+    background-color: #f7fafc;
+    border: 1px solid #e2e8f0;
+    color: #1a202c;
+    font-size: 0.875rem;
+    border-radius: 0.375rem;
+    padding: 0.625rem;
+    display: block;
+    width: 100%;
+}
+
+.select:focus {
+    outline: none;
+    border-color: #4299e1;
+    box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
+}
+
+.select option {
+    background-color: #ffffff;
+    color: #1a202c;
+}
+
+.select option:checked {
+    background-color: #4299e1;
+    color: #ffffff;
+}
+
+.error-message {
+    color: #e53e3e;
+    font-size: 0.875rem;
+}
+
+.custom-label {
     display: block;
     font-size: 0.875rem;
     font-weight: 500;
     color: #4a5568;
-  }
-  
-  .custom-textarea {
+}
+
+.custom-textarea {
     margin-top: 0.25rem;
     padding: 0.5rem;
     width: 100%;
     border: 1px solid #e2e8f0;
     border-radius: 0.375rem;
-    resize: none; 
-  }
-  /*Aqui inician el estilo de las tablas */
-.table-header {
-  background-color: #4f0d6b;
-  color: #ffffff; 
-  height: 32px;
-  text-align: middle;
+    resize: none;
 }
 
 
+/*Aqui inician el estilo de las tablas */
+
+.table-header {
+    background-color: #4f0d6b;
+    color: #ffffff;
+    height: 32px;
+    text-align: middle;
+}
 
 .table-cell {
-  padding: 0.75rem; 
-  text-align: left;
-  font-size: 0.75rem;
-  white-space: nowrap; 
+    padding: 0.75rem;
+    text-align: left;
+    font-size: 0.75rem;
+    white-space: nowrap;
 }
+
 .custom-table-header {
-  border-t: 0;
-  border-l: 0;
-  border-right: 0;
-  font-size: 0.5rem;
-  font-weight: bold;
-  padding: 4px;
+    border-t: 0;
+    border-l: 0;
+    border-right: 0;
+    font-size: 0.5rem;
+    font-weight: bold;
+    padding: 4px;
 }
 
 .custom-table-row {
-  border-bottom: 1px solid #d2c9d8;
+    border-bottom: 1px solid #d2c9d8;
 }
+
 .custom-table-row:hover {
-  background-color: #ddd1dd;
+    background-color: #ddd1dd;
+}
+
+.custom-table-row {
+    border-bottom: 1px solid #d2c9d8;
+}
+
+.custom-table-row:hover {
+    background-color: #ddd1dd;
 }
 
 .custom-th {
-  border-top: 0;
-  padding-left: 6px;
-  vertical-align: middle;
-  border-left: 0;
-  height: 42px;
-  border-right: 0;
-  font-size: 0.90rem; 
-  white-space: nowrap;
-  padding: 4px;
-  text-align: center;
+    border-top: 0;
+    padding-left: 6px;
+    vertical-align: middle;
+    border-left: 0;
+    height: 42px;
+    border-right: 0;
+    font-size: 0.90rem;
+    white-space: nowrap;
+    padding: 4px;
+    text-align: center;
 }
 
 .custom-tr {
-  height: 55px;
+    height: 55px;
 }
-  .input[type="file"] {
+
+.input[type="file"] {
     margin-top: 0.25rem;
     padding: 0.5rem;
     border-width: 1px;
@@ -132,22 +151,24 @@ body {
     color: #1a202c;
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-  
-  .input[type="file"]:focus {
+}
+
+.input[type="file"]:focus {
     outline: none;
     border-color: #4299e1;
     box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
-  }
-  
-  /* Estilos adicionales para mejorar la apariencia del campo de entrada de archivo */
-  .input-file-container {
+}
+
+
+/* Estilos adicionales para mejorar la apariencia del campo de entrada de archivo */
+
+.input-file-container {
     position: relative;
     overflow: hidden;
     margin-top: 0.5rem;
-  }
-  
-  .input-file-button {
+}
+
+.input-file-button {
     position: absolute;
     top: 0;
     right: 0;
@@ -157,16 +178,17 @@ body {
     border: none;
     border-radius: 0 0.375rem 0.375rem 0;
     cursor: pointer;
-  }
-  
-.img{
-  display: block; 
-  margin: auto;
-  padding-top: 20px;
 }
+
+.img {
+    display: block;
+    margin: auto;
+    padding-top: 20px;
+}
+
 
 /* card-bar-evidencia.component.scss */
 
 :host ::ng-deep .ng-dropdown-panel {
-  background-color: white;
+    background-color: white;
 }
